2013-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* display a warning for config file version errors

2013-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* catch input log file opening errors

2013-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* close old PG log file, before changing it

2013-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update doc

2013-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* config window without apply

2013-08-05  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* use stock items for most buttons

2013-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* describe prooftree notification messages and other doc fixes

2013-08-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* show selected menu entry

2013-08-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update INSTALL, README; add compatibility file

2013-08-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update man page

2013-08-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* quit prooftree when closing -config or -help-dialog windows
	* update help window text

2013-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* add history list in external sequent windows

2013-07-23  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix wrong existential info in external node windows

2013-07-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix title of orphaned node windows
	* don't update content of sticky node windows

2013-05-17  Hendrik Tews <prooftree@askra.de>

	* release version 0.12 on 2013-05-17 13:39:12 UTC

2013-05-17  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2013-05-17  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2013-03-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* copyright 2013

2013-03-27  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* change required Proof General version to 4.3pre130327

2013-03-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* another clone regression
