@@ -261,9 +261,16 @@ which will overwrite the built-in default configuration for the
 following 
 .B Prooftree
 runs. The 
-.I Restore
+.I Revert
 button loads and applies the saved configuration.
-To avoid opening partial file names, the
+The
+.I Cancel
+and
+.I OK
+buttons close the dialog, but
+.I Cancel
+additionally resets the configuration to the state before the
+start of the dialog. To avoid opening partial file names, the
 .I Log Proof General input
 check box is deactivated when typing the log file name.
 .\" ==========================================================================
